Fixed alignment of icons, background and coloring

--- a/css/theme.css
+++ b/css/theme.css
@@ -27,6 +27,8 @@ a:hover {
 html,
 body {
   height: 100%;
+  background-image: url(../img/scenery.jpg);
+  background-size: cover;
   background-color: #333;
 }
 body {
@@ -164,6 +166,18 @@ body {
 
 
 .navbar-text > a {
-    color: inherit; 
+    color: darkslategray; 
     text-decoration: none;
+    padding: 5px;
 }
+
+.navbar-text > a:hover {
+    color: cadetblue;
+}
+
+.navbar-text {
+  margin: auto;
+  width: 100%;
+  padding: 10px;
+}
+
